ecs.tf
resource "aws_ecs_cluster" "example" {
  name         = "example"
}


resource "aws_ecs_task_definition" "example" {
#  タスク定義名のプレフィックス
  family                = "example"
  cpu                   = "256"
  memory                = "512"
  network_mode          = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  container_definitions = file("./container_definitions.json")
  execution_role_arn = module.ecs_task_execution_role.iam_role_arn

}




resource "aws_ecs_service" "example" {
  name = "example"
  cluster = aws_ecs_cluster.example.id
  task_definition = aws_ecs_task_definition.example.arn
  desired_count = 2
  launch_type = "FARGATE"
  platform_version = "1.3.0"
  health_check_grace_period_seconds = 60

  network_configuration {
#    privateネットワークで起動するため、public_ipは不要
    assign_public_ip = false
    security_groups =[module.nginx_sg.security_group_id]
    subnets = [
      aws_subnet.private_0.id,
      aws_subnet.private_1.id
    ]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.example.arn
    container_name = "example"
    container_port = 80
  }

  lifecycle{
#  Fargateの場合、デプロイのたびにタスク定義が更新され、plan時に差分がでる。それを無視するため
    ignore_changes = [task_definition]
  }
}


module "nginx_sg" {
  source = "./security_group"
  name = "nginx-sg"
  vpc_id = aws_vpc.example.id
  port = 80
  cidr_blocks = [aws_vpc.example.cidr_block]
}


resource "aws_cloudwatch_log_group" "for_ecs"{
  name = "/ecs/example"
  retention_in_days = 180

}


data "aws_iam_policy" "ecs_task_execution_role_policy"{
  arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

data "aws_iam_policy_document" "ecs_task_execution"{

  source_policy_documents = [data.aws_iam_policy.ecs_task_execution_role_policy.policy]
  statement {
    effect = "Allow"
    actions =["ssm:GetParameters","kms:Decrypt"]
    resources =["*"]
  }
}


module "ecs_task_execution_role" {
  source = "./iam_role"
  name = "ecs_task_execution"
  identifier = "ecs-tasks.amazonaws.com"
  policy = data.aws_iam_policy_document.ecs_task_execution.json
}
